; ModuleID = '/home/carl/AnghaBench/openssl/test/testutil/extr_driver.c_pulldown_test_framework.c'
source_filename = "/home/carl/AnghaBench/openssl/test/testutil/extr_driver.c_pulldown_test_framework.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@openssl_error_cb = common dso_local global i32 0, align 4
@EXIT_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pulldown_test_framework(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = call i32 @set_test_title(i32* null)
  %5 = call i64 (...) @should_report_leaks()
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load i32, i32* @openssl_error_cb, align 4
  %9 = call i64 @CRYPTO_mem_leaks_cb(i32 %8, i32* null)
  %10 = icmp sle i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %7
  %12 = load i32, i32* @EXIT_FAILURE, align 4
  store i32 %12, i32* %2, align 4
  br label %15

13:                                               ; preds = %7, %1
  %14 = load i32, i32* %3, align 4
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %13, %11
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @set_test_title(i32*) #1

declare dso_local i64 @should_report_leaks(...) #1

declare dso_local i64 @CRYPTO_mem_leaks_cb(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
